--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@schematics/angular": "^9.1.8",
     "bootstrap": "^4.4.0",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
