--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -73,4 +73,4 @@ jobs:
           echo VERSION=$VERSION
 
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push ${{ secrets.DOCKER_USERNAME }}/$IMAGE_NAME:$VERSION 
+          docker push $IMAGE_ID:$VERSION
