--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,7 @@ on:
 env:
   # TODO: Change variable to your image's name.
   IMAGE_NAME: personal-website
+  DOCKER_HUB_REPOSITORY:  thomasmendez01/personal-website
 
 jobs:
   # Run tests.
@@ -35,7 +36,7 @@ jobs:
             docker build . --file Dockerfile
           fi
 
-  # Push image to GitHub Packages.
+  # Push image to GitHub Packages and Docker Hub.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     # Ensure test job passes before pushing image.
@@ -53,7 +54,7 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
-      - name: Push image
+      - name: Push image to Github published packages
         run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/$IMAGE_NAME
 
@@ -75,23 +76,13 @@ jobs:
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
           
-  # Push image to Docker Hub
-  publish:
-    # Ensure test job passes before pushing image.
-    needs: test
-
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push'
-
-    steps:
-      - uses: actions/checkout@v2
-
       - name: Build image to match repository 
-        run: docker image tag personal-website thomasmendez01/personal-website
-
-      - name: Log into Docker Hub
+        run: docker image tag $IMAGE_NAME $DOCKER_HUB_REPOSITORY
+        
+      - name: Log into Docker Hub 
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      - name: Push image
+        
+      - name: Push image to Docker Hub repository 
         run: |
-          docker push thomasmendez01/personal-website
+          echo DOCKER_HUB_REPOSITORY=$DOCKER_HUB_REPOSITORY
+          docker push $DOCKER_HUB_REPOSITORY
