Updated Workflow and Dockerfiles for Dev and Prod
Workflow will now publish development container to Github packages and production container to Docker Hub. Docker Compose files will simplify for future updates. README now has updated instructions for accessing published containers.

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   # Run tests.
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  test:
+  test_dev:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,18 +29,30 @@ jobs:
 
       - name: Run tests
         run: |
-          if [ -f docker-compose.test.yml ]; then
-            docker-compose --file docker-compose.test.yml build
-            docker-compose --file docker-compose.test.yml run sut
+          if [ -f docker-compose.yml ]; then
+            docker-compose --file docker-compose.yml build
           else
             docker build . --file Dockerfile
           fi
 
+  test_prod:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run tests
+        run: |
+          if [ -f docker-compose.test.yml ]; then
+            docker-compose --file docker-compose-prod.yml build
+          else
+            docker build . --file Dockerfile-prod
+          fi
+
   # Push image to GitHub Packages and Docker Hub.
   # See also https://docs.docker.com/docker-hub/builds/
-  push:
+  push_dev:
     # Ensure test job passes before pushing image.
-    needs: test
+    needs: test_dev
 
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -76,8 +88,29 @@ jobs:
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
           
-      - name: Build image to match repository 
+      - name: Build production for Docker Hub repository
         run: docker image tag $IMAGE_NAME $DOCKER_HUB_REPOSITORY
+        
+      - name: Log into Docker Hub 
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        
+      - name: Push image to Docker Hub repository 
+        run: |
+          echo DOCKER_HUB_REPOSITORY=$DOCKER_HUB_REPOSITORY
+          docker push $DOCKER_HUB_REPOSITORY
+
+  push_prod:
+      # Ensure test job passes before pushing image.
+    needs: test_prod
+
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Build image
+        run: docker build . --file Dockerfile-prod --tag $DOCKER_HUB_REPOSITORY
         
       - name: Log into Docker Hub 
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
