--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,5 +1,9 @@
+#############
+### build ###
+#############
+
 # base image
-FROM node:12.13.0
+FROM node:12.13.0 as build
 
 # install chrome for protractor tests
 RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
@@ -20,8 +24,25 @@ RUN npm install -g @angular/cli@10.0.1
 # add app
 COPY . /app
 
-# start app
-CMD ng serve --host 0.0.0.0
+# run tests
+RUN npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
+RUN npm run e2e -- --port 4202 --protractor-config=e2e/protractor-ci.conf.js
 
-# expose default Angular port 4200
-EXPOSE 4200
+# generate build
+RUN ng build --output-path=dist
+
+############
+### prod ###
+############
+
+# base image
+FROM nginx:1.16.0-alpine
+
+# copy artifact build from the 'build environment'
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# expose default NGINX port 80
+EXPOSE 80
+
+# run nginx
+CMD ["nginx", "-g", "daemon off;"]
